<resources>
    <string name="app_name">My Health</string>
    <string name="input">Enter goal number in milliliters</string>
    <string name="input_content">100ml to 99999ml</string>
    <string name="input_hint">500</string>
    <string name="input_prefill"></string>
    <string name="inputCustomAmount">Enter water intake in milliliters</string>
    <string name="inputCustomAmountDelete">Enter water amount you\'d like to discard</string>
    <string name="goalStep">Your goal</string>
    <string name="week_statistics">Your statistics</string>
    <string name="sportGoatUpdate">Enter your new goal for the day</string>
    <string name="inputGoalStep">100 steps to 50000 steps</string>

    <string name="normal">Normal</string>
    <string name="obese">Obese</string>
    <string name="overweight">Over Weight</string>
    <string name="underweight">Under Weight</string>

    <string name="api_key">eb7be285240442b98589364944bc3155</string>


    <string name="editname">Name</string>
    <string name="logintxt">Log in</string>
    <string name="signuptxt">Sign Up</string>
    <string name="mll">ml</string>
    <string name="cmm">cm</string>
    <string name="kgg">kg</string>
    <string name="added">Added </string>
    <string name="discard">Discarded </string>
    <string name="bigwater">Amount is too big</string>
    <string name="metr">m</string>
    <string name="calories">cal</string>
    <string name="step">STEPS</string>
    <string name="step2">STEPS</string>
    <string name="step3">STEP</string>
    <string name="like">Likes</string>
    <string name="like2">Likes</string>
    <string name="like3">Like</string>
    <string name="servings">Servings</string>
    <string name="servings2">Servings</string>
    <string name="servings3">Serving</string>
    <string name="minute">Minutes</string>
    <string name="minute2">Minutes</string>
    <string name="minute3">Minute</string>
    <string name="update">update</string>
    <string name="your_weight">Your weight</string>
    <string name="your_height">Your height</string>
    <string name="your_email">Your Email</string>
    <string name="welcome_to_health">Welcome to Health app</string>
    <string name="recipes">Recipes</string>
    <string name="search">Search your recipe...</string>
    <string name="your_index_mass_body">Your index mass body</string>
    <string name="edit_profile">Edit profile</string>
    <string name="recipe_name">Recipe name</string>
    <string name="ingridients">Ingridients</string>
    <string name="instruction">Instruction</string>
    <string name="calories_burned">Calories burned</string>
    <string name="distnce_traveled">Distnce traveled</string>
    <string name="your_goal">Your goal</string>
    <string name="drunk_today">Drunk today</string>
    <string name="water1">Add 250ml</string>
    <string name="water2">Add 500ml</string>
    <string name="water3">Add 1000ml</string>
    <string name="water4">Custom amount</string>
    <string name="water5">Discard water</string>
    <string name="emaillogin">Email</string>
    <string name="passwordlogin">Password</string>
    <string name="log_inlogin">Log in</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="age">Age</string>
    <string name="weightsignup">Weight</string>
    <string name="heightsignup">Height</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="itemrecep">Item</string>
    <string name="step_name">step name</string>
    <string name="equipments">Equipments:</string>
    <string name="ingredients">Ingredients:</string>
    <string name="chicken">chicken</string>
    <string name="pc">1 pc</string>
    <string name="dish_name">Dish name</string>
    <string name="persons">2 Persons</string>
    <string name="likes">2 Likes</string>
    <string name="hour">2 hour</string>
    <string name="dessert">Dessert</string>
    <string name="menu">Menu</string>
    <string name="loading">Loading...</string>
    <string name="requiredPassword">Password is required</string>
    <string name="requiredEmail">Email is required</string>
    <string name="validEmail">Please provide your valid Email</string>
    <string name="requiredName">Name is required</string>
    <string name="requiredAge">Age is required</string>
    <string name="requiredHeight">Height is required</string>
    <string name="requiredWeight">Weight is required</string>
    <string name="Passwordcharacters">Min Password length should be of 6 characters! </string>
    <string name="Passwordsconfirm">Passwords dont confirm</string>
    <string name="recipesTitl">Saved recipes</string>
    <string name="profileUpdate">Profile Updated Successfully!</string>



    <string name="goal">Goal</string>
    <string name="step_size">Step size</string>
    <string name="goal_summary">%,d steps</string>
    <string name="step_size_summary">Current step size: %1$.2f %2$s</string>
    <string name="export_summary">Save your data in a .csv file</string>
    <string name="export_title">Export/Backup</string>
    <string name="import_summary">Imports previously saved data</string>
    <string name="import_title">Import/Restore</string>
    <string name="notification">Show notification</string>
    <string name="set_goal">Set goal</string>
    <string name="set_step_size">Set step size</string>
    <string name="file_cant_read">Error: %s can not be read</string>
    <string name="error_file">Error accessing the file: %s</string>
    <string name="error_external_storage_not_available">Error: External storage not available</string>
    <string name="data_saved">Data saved in %s</string>
    <string name="entries_imported">%d entries imported</string>
    <string name="entries_ignored">%d entries were ignored as they did not contain valid data</string>
    <string name="entries_overwritten">%d entries were overwritten with imported data</string>
    <string name="sign_in_necessary">Sign in necessary</string>
    <string name="steps">steps</string>
    <string name="text_color">Text color:</string>
    <string name="background_color">Background color:</string>
    <string name="settings">Settings</string>
    <string name="achievements">Achievements</string>
    <string name="goal_reached_notification">Goal reached! %s steps and counting</string>
    <string name="notification_text">%s steps to go</string>
    <string name="total">Total</string>
    <string name="notification_title">Pedometer is counting</string>
    <string name="your_progress_will_be_shown_here_soon">Your progress will be shown here soon</string>
    <string name="average">Average</string>
    <string name="record">Record</string>
    <string name="total_last_7_days">Total in last 7 days</string>
    <string name="average_last_7_days">Average in last 7 days</string>
    <string name="total_this_month">Total in this month</string>
    <string name="average_this_month">Average in this month</string>
    <string name="file_already_exists">File already exists. Are you sure you want to overwrite it?</string>
    <string name="about_app_version">App version: %s</string>
    <string name="since">Since %s</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="close">close</string>
    <string name="no_split_active">No split counter active. Click start to count the steps from now on</string>
    <string name="split_count">Split count</string>
    <string name="no_sensor">Sensor not found</string>
    <string name="no_sensor_explain">This app requires a dedicated hardware step sensor - which your device does not have. This app won\'t run on your device.</string>
    <string name="permission_external_storage">No permission to access external storage</string>
    <string name="notification_settings">Notification settings</string>
    <string name="this_month">This Month</string>
    <string name="total_steps">Total Steps</string>
    <string name="kcal">Kcal</string>
    <string name="distance">Distance</string>
    <string name="steps22">steps</string>


    <string-array name="tags">
        <item>main course</item>
        <item>side dish</item>
        <item>dessert</item>
        <item>appetizer</item>
        <item>salad</item>
        <item>bread</item>
        <item>breakfast</item>
        <item>soup</item>
        <item>beverage</item>
        <item>sauce</item>
        <item>marinade</item>
        <item>fingerfood</item>
        <item>snack</item>
        <item>drink</item>
    </string-array>
</resources>