<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginAndSignUp.SignUpFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/signup_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_edittext_1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".8"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintHorizontal_bias=".5"
                android:hint="@string/emaillogin"
                android:inputType="textEmailAddress"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>

            <EditText
                android:id="@+id/signup_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/editname"
                android:inputType="textPersonName"
                android:paddingLeft="20dp"
                android:background="@drawable/custom_edittext_1"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginTop="20dp"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintHorizontal_bias=".5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_email"
                app:layout_constraintWidth_percent=".8" />

            <EditText
                android:id="@+id/signup_age"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                android:inputType="number"
                android:background="@drawable/custom_edittext_1"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginTop="20dp"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintHorizontal_bias=".5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_name"
                app:layout_constraintWidth_percent=".8" />

            <EditText
                android:id="@+id/signup_weight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/weightsignup"
                android:inputType="number"
                android:background="@drawable/custom_edittext_1"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginTop="20dp"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintHorizontal_bias=".5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_age"
                app:layout_constraintWidth_percent=".8" />

            <EditText
                android:id="@+id/signup_height"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/heightsignup"
                android:inputType="number"
                android:background="@drawable/custom_edittext_1"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginTop="20dp"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintHorizontal_bias=".5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_weight"
                app:layout_constraintWidth_percent=".8" />

            <EditText
                android:id="@+id/signup_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:background="@drawable/custom_edittext_1"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginTop="20dp"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintHorizontal_bias=".5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_height"
                app:layout_constraintWidth_percent=".8" />

            <EditText
                android:id="@+id/signup_confirm_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:background="@drawable/custom_edittext_1"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginTop="20dp"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintHorizontal_bias=".5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_password"
                app:layout_constraintWidth_percent=".8" />


            <Button
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginTop="20dp"
                android:paddingLeft="20dp"
                android:id="@+id/signup_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@drawable/custom_button_2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_confirm_password"
                app:layout_constraintVertical_bias=".85"
                app:layout_constraintWidth_percent=".8"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>