<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    android:id="@+id/dishListCard"
    app:cardElevation="8dp"
    app:cardCornerRadius="20dp"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_marginLeft="10dp"
            android:id="@+id/titleTxt"
            android:text="@string/dish_name"
            android:singleLine="true"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TextView>

        <ImageView
            android:id="@+id/dishImage"
            android:scaleType="centerCrop"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <ImageView
                    android:src="@drawable/ic_baseline_group_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/personsTxt"
                    android:textSize="14sp"
                    android:padding="8dp"
                    android:text="@string/persons"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <ImageView
                    android:src="@drawable/ic_baseline_thumb_up_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></ImageView>
                <TextView
                    android:id="@+id/likesTxt"
                    android:textSize="14sp"
                    android:padding="8dp"
                    android:text="@string/likes"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <ImageView
                    android:src="@drawable/ic_baseline_timer_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></ImageView>
                <TextView
                    android:id="@+id/timeTxt"
                    android:textSize="14sp"
                    android:padding="8dp"
                    android:text="@string/hour"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>