<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="325dp"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:id="@+id/circul"
        android:gravity="center"
        android:orientation="vertical">

        <com.mikhaellopez.circularfillableloaders.CircularFillableLoaders
            android:id="@+id/circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/dropx"
            app:cfl_border="false"
            app:cfl_progress="100"
            app:cfl_wave_amplitude="0.03"
            app:cfl_wave_color="@color/water"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/circul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="10dp">

            <ImageButton
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/changegoal"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:layout_gravity="right"
                android:background="@drawable/pencilblack">
            </ImageButton>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp"
                android:layout_gravity="center">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="25dp"
                    android:textColor="@color/grey"
                    android:drawableLeft="@drawable/target"
                    android:drawablePadding="10dp"
                    android:id="@+id/goal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_goal"
                    android:textColor="@color/grey"
                    android:layout_marginLeft="45dp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>



        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="25dp"
                    android:textColor="@color/grey"
                    android:drawableLeft="@drawable/calendar"
                    android:drawablePadding="10dp"
                    android:id="@+id/today"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/drunk_today"
                    android:textColor="@color/grey"
                    android:layout_marginLeft="45dp"/>

            </LinearLayout>


        </androidx.cardview.widget.CardView>
    </LinearLayout>


    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/material_design_android_floating_action_menu"
        android:layout_width="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="70dp"
        android:paddingEnd="14dp"
        android:paddingRight="14dp"
        android:paddingBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        fab:menu_animationDelayPerItem="55"
        fab:menu_buttonSpacing="0dp"
        fab:menu_colorNormal="@color/colorPrimary"
        fab:menu_colorPressed="@color/colorPrimaryDark"
        fab:menu_colorRipple="#99d4d4d4"
        fab:menu_fab_size="normal"
        fab:menu_icon="@drawable/fab_add"
        fab:menu_labels_colorNormal="#1f3456"
        fab:menu_labels_colorPressed="#444"
        fab:menu_labels_colorRipple="#66efecec"
        fab:menu_labels_cornerRadius="3dp"
        fab:menu_labels_ellipsize="none"
        fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
        fab:menu_labels_margin="5dp"
        fab:menu_labels_maxLines="-1"
        fab:menu_labels_padding="8dp"
        fab:menu_labels_paddingBottom="10dp"
        fab:menu_labels_position="left"
        fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
        fab:menu_labels_showShadow="true"
        fab:menu_labels_singleLine="false"
        fab:menu_labels_textColor="#f2f1f1"
        fab:menu_labels_textSize="15sp"
        fab:menu_openDirection="up"
        fab:menu_shadowColor="#5A5A5A"
        fab:menu_shadowRadius="2dp"
        fab:menu_shadowXOffset="1dp"
        fab:menu_shadowYOffset="4dp"
        fab:menu_showShadow="false">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/material_design_floating_action_menu_item5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_waterdrop"
            app:fab_colorNormal="@color/colorAccent"
            app:fab_colorPressed="@color/colorAccentLighter"
            fab:fab_label="@string/water5"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/material_design_floating_action_menu_item4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_waterdrop"
            app:fab_colorNormal="@color/green"
            app:fab_colorPressed="@color/greenPress"
            fab:fab_label="@string/water4"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/material_design_floating_action_menu_item3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_waterdrop"
            app:fab_colorNormal="@color/yellow"
            app:fab_colorPressed="@color/yellowPress"
            fab:fab_label="@string/water3"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/material_design_floating_action_menu_item2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_waterdrop"
            app:fab_colorNormal="@color/blueDarker"
            app:fab_colorPressed="@color/blueDarkerPress"
            fab:fab_label="@string/water2"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/material_design_floating_action_menu_item1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_waterdrop"
            app:fab_colorNormal="@color/colorPrimaryDark"
            app:fab_colorPressed="@color/colorPrimary"
            fab:fab_label="@string/water1"
            fab:fab_size="mini" />
    </com.github.clans.fab.FloatingActionMenu>


</RelativeLayout>